--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,18 +19,15 @@ jobs:
 #        release_name: autotagname
  matrix:
     runs-on: ${{ matrix.cfg.os }}
-    container:
-      image: ${{ matrix.cfg.container }}
-      if: ${{ matrix.cfg.os }}=='Windows'
-
+    container: ${{ matrix.cfg.container }}
     defaults:
         run:
             shell: ${{ matrix.cfg.shell }}
     strategy:
         matrix:
             cfg:
-            - { os: ubuntu-18.04, shell: bash, arch: amd64, runtime: bionic, desc: 'Ubuntu 18.04 amd64' }
-            - { os: ubuntu-16.04, shell: bash, arch: i386, runtime: xenial, container: 'i386/ubuntu:xenial', desc: 'Ubuntu 16.04 x86' }
+            - { os: ubuntu-18.04, shell: bash, arch: amd64, runtime: bionic, container: 'i386/ubuntu:${{ matrix.cfg.runtime }}', desc: 'Ubuntu 18.04 x86' }
+            - { os: ubuntu-16.04, shell: bash, arch: i386, runtime: xenial, container: 'i386/ubuntu:${{ matrix.cfg.runtime }}', desc: 'Ubuntu 16.04 x86' }
     name: ${{ matrix.cfg.desc }}
     steps: 
     - uses: actions/checkout@v2
