--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -26,11 +26,8 @@ jobs:
     strategy:
         matrix:
             cfg:
-            - { os: ubuntu-18.04, shell: bash, arch: amd64, runtime: bionic, container: 'ubuntu:bionic', desc: 'Ubuntu 18.04 x86' }
-            - { os: ubuntu-16.04, shell: bash, arch: i386, runtime: xenial, container: 'ubuntu:xenial', desc: 'Ubuntu 16.04 x86' }
+            - { os: ubuntu-18.04, shell: bash, arch: amd64, runtime: bionic, container: 'amd64/ubuntu:bionic', desc: 'Ubuntu 18.04 amd64' }
+            - { os: ubuntu-16.04, shell: bash, arch: i386, runtime: xenial, container: 'i386/ubuntu:xenial', desc: 'Ubuntu 16.04 x86' }
     name: ${{ matrix.cfg.desc }}
     steps: 
     - uses: actions/checkout@v2
-    - run: |
-        cmake
-        cmake --build .
