--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -31,6 +31,6 @@ jobs:
             - { os: ubuntu-latest, shell: bash, arch: armhf, runtime: buster, container: 'lebarsfa/pi:buster', desc: 'pi' }
     name: ${{ matrix.cfg.desc }}
     steps: 
-    - run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
-      if: contains(matrix.cfg.container, 'pi')
+#    - run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
+#      if: contains(matrix.cfg.container, 'pi')
     - uses: actions/checkout@v1 # https://github.community/t/actions-checkout-v2-fails-in-32bit-container/165539/2
