--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,7 +19,7 @@ jobs:
 #        release_name: autotagname
  matrix:
     runs-on: ${{ matrix.cfg.os }}
-#    container: ${{ matrix.cfg.container }}
+    container: ${{ matrix.cfg.container }}
     defaults:
         run:
             shell: ${{ matrix.cfg.shell }}
@@ -27,8 +27,8 @@ jobs:
         matrix:
             cfg:
             - { os: ubuntu-18.04, shell: bash, arch: amd64, runtime: bionic, container: 'amd64/ubuntu:bionic', desc: 'Ubuntu 18.04 amd64' }
-#            - { os: ubuntu-16.04, shell: bash, arch: i386, runtime: xenial, container: 'i386/ubuntu:xenial', desc: 'Ubuntu 16.04 x86' }
-#            - { os: ubuntu-latest, shell: bash, arch: i386, runtime: trusty, container: 'i386/ubuntu:trusty', desc: 'Ubuntu 14.04 x86' }
+            - { os: ubuntu-16.04, shell: bash, arch: i386, runtime: xenial, container: 'i386/ubuntu:xenial', desc: 'Ubuntu 16.04 x86' }
+            - { os: ubuntu-latest, shell: bash, arch: i386, runtime: trusty, container: 'i386/ubuntu:trusty', desc: 'Ubuntu 14.04 x86' }
 #            - { os: ubuntu-latest, shell: bash, arch: armhf, runtime: buster, container: 'lebarsfa/pi:buster', desc: 'pi' }
     name: ${{ matrix.cfg.desc }}
     steps: 
@@ -36,11 +36,8 @@ jobs:
 #      if: contains(matrix.cfg.container, 'pi')
     - uses: actions/checkout@v1 # https://github.community/t/actions-checkout-v2-fails-in-32bit-container/165539/2
     - run: |
-        sudo apt-get -q update || true
-        sudo apt-get remove -y libgtk2.0-cil ; sudo apt-get autoremove -y # libgtk2.0 cannot be installed due to incompatible packages already installed...?
-        sudo apt-get install -y libopencv-dev libgtk2.0
-#        uname -a && cat /etc/os-release
-#        apt-get -q update && apt-get -y install lsb-release && lsb_release -a
+        uname -a && cat /etc/os-release
+        apt-get -q update && apt-get -y install lsb-release && lsb_release -a
 #        cmake .
 
 # container: ${{ matrix.cfg.container }} cannot be empty, pi does not work, the containers don't have cmake...->self-hosted runners but no i386 but maybe possible to configure amd64 so that it acts like an i386...?
