--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,6 +1,7 @@
 #on: [push, pull_request]
 on: 
     release:
+        types: [published]
 #    push:
 #        branches: '**'
         branches: 'master'
