--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,7 +1,7 @@
 #on: [push, pull_request]
 on: 
     push:
-        branches: 'master'
+        branches: 'test'
         tags: 'v*.*.*'
 #        branches: '**'
 #        tags: '' # Restrict to blank tags
