--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -2,9 +2,8 @@
 on: 
     push:
         branches: 'master'
-        tags: 'vtest'
 #        branches: '**'
-#        tags: '' # Restrict to blank tags
+        tags: '' # Restrict to blank tags
 #    pull_request:
 #    release:
 #        types: [published]
@@ -22,6 +21,7 @@ jobs:
 #        tag_name: autotagname
 #        release_name: autotagname
  matrix:
+    if: ${{ startsWith(github.ref, 'refs/tags/ibex-') }}
     runs-on: ${{ matrix.cfg.os }}
 #    container: ${{ matrix.cfg.container }}
     defaults:
