--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -6,38 +6,30 @@ on:
     pull_request:
 jobs:
  # This job may be commented if a new release should not be created...
-# deploy:
-#    runs-on: ubuntu-latest
-#    steps: 
-#    - uses: actions/create-release@v1
-#      id: create_release
-#      env:
-#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#      with:
-#        draft: true
-#        tag_name: autotagname
-#        release_name: autotagname
- matrix:
-    runs-on: ${{ matrix.cfg.os }}
-    container: ${{ matrix.cfg.container }}
-    defaults:
-        run:
-            shell: ${{ matrix.cfg.shell }}
-    strategy:
-        matrix:
-            cfg:
-            - { os: ubuntu-18.04, shell: bash, arch: amd64, runtime: bionic, container: 'amd64/ubuntu:bionic', desc: 'Ubuntu 18.04 amd64' }
-            - { os: ubuntu-16.04, shell: bash, arch: i386, runtime: xenial, container: 'i386/ubuntu:xenial', desc: 'Ubuntu 16.04 x86' }
-            - { os: ubuntu-latest, shell: bash, arch: i386, runtime: trusty, container: 'i386/ubuntu:trusty', desc: 'Ubuntu 14.04 x86' }
-#            - { os: ubuntu-latest, shell: bash, arch: armhf, runtime: buster, container: 'lebarsfa/pi:buster', desc: 'pi' }
-    name: ${{ matrix.cfg.desc }}
+ deploy:
+    runs-on: ubuntu-latest
     steps: 
-#    - run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
-#      if: contains(matrix.cfg.container, 'pi')
-    - uses: actions/checkout@v1 # https://github.community/t/actions-checkout-v2-fails-in-32bit-container/165539/2
-    - run: |
-        uname -a && cat /etc/os-release
-        apt-get -q update && apt-get -y install lsb-release && lsb_release -a
-#        cmake .
+    - uses: actions/create-release@v1
+      id: create_release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        draft: true
+        tag_name: autotagname
+        release_name: autotagname
 
-# container: ${{ matrix.cfg.container }} cannot be empty, pi does not work, the containers don't have cmake...->self-hosted runners but no i386 but maybe possible to configure amd64 so that it acts like an i386...?
+ tex:
+    steps: 
+    - uses: actions/checkout@v2
+    - uses: xu-cheng/latex-action@v2
+      with:
+        root_file: |
+          frontiers.tex
+        working_directory: Frontiers_LaTex_Templates
+    - uses: xresloader/upload-to-github-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        file: "Frontiers_LaTex_Templates/frontiers.pdf"
+        overwrite: true
+        tag_name: autotagname
