--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,6 +19,7 @@ jobs:
         release_name: autotagname
 
  tex:
+    runs-on: ubuntu-latest
     steps: 
     - uses: actions/checkout@v2
     - uses: xu-cheng/latex-action@v2
