--- a/OLD/2021-01-01 (0) docker-github-actions.yml
+++ b/OLD/2021-01-01 (0) docker-github-actions.yml
@@ -4,6 +4,7 @@ on:
         branches: '**'
         tags: '' # Restrict to blank tags
     pull_request:
+    #pull_request_target: # This would have the advantage to be able to get the release using the existing actions, which could cause confusions...
 jobs:
  # This job may be commented if a new release should not be created...
  deploy:
@@ -15,8 +16,9 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         draft: true
-        tag_name: autotagname
-        release_name: autotagname
+        tag_name: autotagname-${{ github.sha }}
+        release_name: autotagname-${{ github.sha }}
+      if: github.event_name != 'pull_request'
  matrix:
     runs-on: ${{ matrix.cfg.os }}
     strategy:
@@ -43,7 +45,8 @@ jobs:
       with:
         file: "${{ matrix.cfg.deploy-file }}"
         overwrite: true
-        tag_name: autotagname
+        tag_name: autotagname-${{ github.sha }}
+      if: github.event_name != 'pull_request'
  dockerpi:
     runs-on: ubuntu-latest
     steps: 
@@ -56,4 +59,5 @@ jobs:
       with:
         file: "./Hello_pi"
         overwrite: true
-        tag_name: autotagname
+        tag_name: autotagname-${{ github.sha }}
+      if: github.event_name != 'pull_request'
