--- a/OLD/2021-01-02 (0) cache-vs-opencv-github-actions.yml
+++ b/OLD/2021-01-02 (0) cache-vs-opencv-github-actions.yml
@@ -4,7 +4,7 @@ on:
         branches: '**'
         tags: '' # Restrict to blank tags
     pull_request:
-    #pull_request_target: # This would have the advantage to be able to get the release using the existing actions, which could cause confusions...
+    #pull_request_target: # This would run the old version of the actions, which could cause confusions...
 jobs:
  # This job may be commented if a new release should not be created...
 # deploy:
