--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,32 +1,51 @@
 #on: [push, pull_request]
 on: 
     push:
-        branches: '**'
+        #branches: '**'
+        branches: 'main'
         tags: '' # Restrict to blank tags
     pull_request:
     #pull_request_target: # This would run the old version of the actions, which could cause confusions...
 jobs:
- matrix:
-    runs-on: ${{ matrix.cfg.os }}
-    container: ${{ matrix.cfg.container }}
-    defaults:
-        run:
-            shell: ${{ matrix.cfg.shell }}
+ # This job may be commented if a new release should not be created...
+ deploy:
+    runs-on: ubuntu-latest
+    steps: 
+    - uses: actions/create-release@v1
+      id: create_release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        draft: true
+        tag_name: autotagname-${{ github.sha }}
+        release_name: autotagname-${{ github.sha }}
+      if: github.event_name != 'pull_request'
+ build:
+    runs-on: ${{ matrix.os }}
     strategy:
         matrix:
-            cfg:
-            - { os: ubuntu-18.04, shell: bash, arch: amd64, runtime: bionic, container: 'amd64/ubuntu:bionic', desc: 'Ubuntu 18.04 amd64' }
-            - { os: ubuntu-16.04, shell: bash, arch: i386, runtime: xenial, container: 'i386/ubuntu:xenial', desc: 'Ubuntu 16.04 x86' }
-            - { os: ubuntu-latest, shell: bash, arch: i386, runtime: trusty, container: 'i386/ubuntu:trusty', desc: 'Ubuntu 14.04 x86' }
-#            - { os: ubuntu-latest, shell: bash, arch: armhf, runtime: buster, container: 'lebarsfa/pi:buster', desc: 'pi' }
-    name: ${{ matrix.cfg.desc }}
+            os: [ubuntu-latest, windows-latest]
+            python-version: [3.8]
+            include:
+            - os: ubuntu-latest
+              deploy-file: ./Hello
+            - os: windows-latest
+              shell: bash
+              deploy-file: ./Debug/Hello.exe
     steps: 
-#    - run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
-#      if: contains(matrix.cfg.container, 'pi')
-    - uses: actions/checkout@v1 # https://github.community/t/actions-checkout-v2-fails-in-32bit-container/165539/2
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
     - run: |
-        uname -a && cat /etc/os-release
-        apt-get -q update && apt-get -y install lsb-release && lsb_release -a
-#        cmake .
-
-# container: ${{ matrix.cfg.container }} cannot be empty, pi does not work, the containers don't have cmake...->self-hosted runners but no i386 but maybe possible to configure amd64 so that it acts like an i386...?
+        cmake . && cmake --build .
+        python -c "import sys; print(sys.version)"
+        ls -l
+    - uses: xresloader/upload-to-github-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        file: "${{ matrix.deploy-file }}"
+        overwrite: true
+        tag_name: autotagname-${{ github.sha }}
+      if: github.event_name != 'pull_request'
