--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -38,7 +38,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - run: |
-        cmake . && cmake --build .
+        cmake . && cmake --build . && ${{ matrix.deploy-file }}
         python -c "import sys; print(sys.version)"
         ls -l
     - uses: xresloader/upload-to-github-release@v1
