--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -16,8 +16,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         draft: true
-        tag_name: autotagname-${{ github.sha }}
-        release_name: autotagname-${{ github.sha }}
+        tag_name: ${{ github.sha }}
+        release_name: ${{ github.sha }}
       if: github.event_name != 'pull_request'
  build:
     runs-on: ${{ matrix.os }}
@@ -46,5 +46,5 @@ jobs:
       with:
         file: "${{ matrix.deploy-file }}"
         overwrite: true
-        tag_name: autotagname-${{ github.sha }}
+        tag_name: ${{ github.sha }}
       if: github.event_name != 'pull_request'
